--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -356,7 +356,7 @@ jobs:
         /opt/crave/resync.sh && \
 
         # Set up build environment
-        export BUILD_USERNAME=${{ github.actor }} ; \
+        export BUILD_USERNAME=jancok ; \
         export BUILD_HOSTNAME=crave ; \
         source build/envsetup.sh && \
 
